[tool.poetry]
name = "repl-nix-botlove"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_botlove"}]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.6.0"
pytz = "^2024.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
